syntax = "proto3";

package api.rc.v1;

import "google/api/annotations.proto";

option go_package = "brillinkmicros/api/rc/v1;v1";
option java_multiple_files = true;
option java_outer_classname = "RcV1";
option java_package = "api.rc.v1";


service RcRdmService {
  rpc GetAhpResult(GetAhpResultDetailReq) returns (AhpResultResp) {
    option (google.api.http) = {
      get: "/micros/rc/v1/ahp/res/detail"
    };
  }
}

message GetAhpResultDetailReq {
  int64 dep_id = 1;
  int32 level = 2;
}

message AhpResultResp {
  bool available = 1;
  string msg = 2;
  repeated AhpResDetail data = 3;
}

message AhpResDetail {
  string field = 1;
  float score = 2;
  int32 level = 3;
}

